--- a/views/newScore.html
+++ b/views/newScore.html
@@ -24,7 +24,8 @@
                 <table>
                     <thead>
                         <tr>
-                            <td>Scorecard</td>
+                            <td>Score</td>
+                            <td>No. of Putts</td>
                         </tr>
                     </thead>
                     <tbody>
@@ -32,91 +33,145 @@
                             <td>
                                 <input type="number" name='score[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                            
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='1' max='10'>
+                            </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
                             </td>
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='6' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='7' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='8' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='9' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='10' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='11' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='12' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='13' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>                                                
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='14' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='15' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='16' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='17' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                         <tr>
                             <td>
                                 <input type="number" name='score[]' id='18' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
+                            <td>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                            </td>                             
                         </tr>
                     </tbody>
                 </table>
