--- a/views/signup.html
+++ b/views/signup.html
@@ -14,6 +14,18 @@
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
     <body>
-        <h1>Sign Up Page</h1>
+        <h1>New User Sign Up Page</h1>
+
+            <form method='POST' action='/signup' id='new-user'>
+
+                <input placeholder="Firstname" class="textbox-n" type="text" name='firstname'>
+                <input placeholder="Surname" class="textbox-n" type="text" name='surname'>
+                <input placeholder="E-Mail Address" class="textbox-n" type="text" name='email'>
+                <input placeholder="Password" class="textbox-n" type="password" name='password'>
+            
+                <button class="btn btn-default form-control">Complete Sign Up</button>
+
+            </form>
+
     </body>
 </html>
