--- a/views/myCourses.html
+++ b/views/myCourses.html
@@ -7,7 +7,7 @@
         <script src="/vendor/underscore/underscore-min.js"></script>
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
-        <script src="/static/javascript/newscore.js"></script>
+        <script src="/static/javascript/courselist.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -17,7 +17,20 @@
 
                 <h1>List of User Courses</h1>
 
+                <div id='courseList-placeholder'></div>
+
+
+
+                <script type="text/template" id="courseList-template">
+                    <div class="course">
+                      <p>
+                        <%= courseName %> : <%= par %> 
+                      </p>
+                    </div>
+                  </script>
+
+
         </div>
-        
+
     </body>
 </html>
