udpate to score submission - nested routing, hidden field, REGEXP still required for URL

--- a/views/myCourses.html
+++ b/views/myCourses.html
@@ -27,7 +27,8 @@
 
                 <script type="text/template" id="courseList-template">
                       <li>
-                        <%= courseName %> <%= par %> 
+                        <a href='/<%= _id %>/newscore' data-id='<%= _id %>'>Name of course here</a>
+                         
                       </li>
                   </script>
 
