--- a/views/newCourseInfo.html
+++ b/views/newCourseInfo.html
@@ -18,7 +18,7 @@
         <h1>New Course Info Page</h1>
     
             <form method='POST' action='/scorecard' id='new-course'>
-                <input type="text" name='courseName' class="form-control" placeholder="Name of Golf Course" aria-describedby="sizing-addon2">
+                <input type="text" name='coursename' class="form-control" placeholder="Name of Golf Course" aria-describedby="sizing-addon2">
                 <table>
                     <thead>
                         <tr>
