--- a/views/newScore.html
+++ b/views/newScore.html
@@ -18,9 +18,12 @@
 
         <h1>New Score Page</h1>
     
-            <form method='POST' action='/newscore' id='new-score'>
+            <form method='POST' action='/:course/newscore' id='new-score'>
                 <!-- <input type="text" name='course' class="form-control" placeholder="Name of Golf Course" aria-describedby="sizing-addon2"> -->
                 <input placeholder="Date of Round" class="textbox-n" type="" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" name='date'>
+
+                <input type="hidden" id="courseID" name='coursename' value=''>
+                
                 <table>
                     <thead>
                         <tr>
