minor changes to AJAX request on newscore page

--- a/views/login.html
+++ b/views/login.html
@@ -15,5 +15,15 @@
     </head>
     <body>
         <h1>Login Page</h1>
+
+            <form method='POST' action='/login'>
+   
+                <input placeholder="E-Mail Address" class="textbox-n" type="text" name='email'>
+                <input placeholder="Password" class="textbox-n" type="password" name='password'>
+
+                <button class="btn btn-default">Login</button>
+
+            </form>
+
     </body>
 </html>
