--- a/views/newScore.html
+++ b/views/newScore.html
@@ -19,7 +19,7 @@
         <h1>New Score Page</h1>
     
             <form method='POST' action='/:course/newscore' id='new-score'>
-                <!-- <input type="text" name='course' class="form-control" placeholder="Name of Golf Course" aria-describedby="sizing-addon2"> -->
+   
                 <input placeholder="Date of Round" class="textbox-n" type="" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" name='date'>
 
                 <input type="hidden" id="courseID" name='coursename' value=''>
@@ -182,5 +182,43 @@
             </form>  
 
     </div>
+
+
+
+        <!-- JQUERY TO EXTRACT COURSE ID FROM URL BAR AND PUT IN HIDDEN FIELD -->
+
+        <script>
+        function courseData() {
+            var pathArray = window.location.pathname.split('/');
+            var courseID = pathArray[1]; 
+            var customURL = "/" + courseID + ".json"            
+            // REGEX to extract the course ID
+            $('#courseID').val(courseID);
+
+            // 1. AJAX request to get course info, querying DB using courseID
+            $.ajax({
+                url: customURL,
+                data: courseID, 
+                datatype: 'json',
+                // success: function(data) {
+                // var courses = data;
+                // console.log('AJAX request here: ' + courses);
+            });
+        };
+
+
+
+
+
+        $(function() {
+
+            courseData();
+
+        });
+
+        </script>
+
+
+
     </body>
 </html>
