--- a/views/profile.html
+++ b/views/profile.html
@@ -8,12 +8,15 @@
         <script src="/vendor/underscore/underscore-min.js"></script>
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
-        <script src="/static/javascript/newscore.js"></script>
+        <script src="/static/javascript/profile.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
     <body>
         <h1>Profile Page</h1>
+
+            <h3 id='hello'>Hello, </h3>
+
     </body>
 </html>
