updated scorecard - customized, name and par, still required net score calcs

--- a/views/newScore.html
+++ b/views/newScore.html
@@ -17,6 +17,9 @@
     <div class='container'>
 
         <h1>New Score Page</h1>
+
+        <h3 id='courseName'>Course: </h3>
+        <h5 id='test'></h5>
     
             <form method='POST' action='/:course/newscore' id='new-score'>
    
@@ -27,20 +30,28 @@
                 <table>
                     <thead>
                         <tr>
+                            <td>Hole No.</td>
+                            <td>Par</td>
                             <td>Score</td>
                             <td>No. of Putts</td>
+                            <td>Net Score</td>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
+                            <td>1</td>
+                            <td id='par1'></td>
                             <td>
                                 <input type="number" name='score[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
                             <td>
                                 <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
-                            </td>                            
+                            </td>
+                            <td>Net Score Here: </td>                            
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par2'></td>
                             <td>
                                 <input type="number" name='score[]' id='2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -49,6 +60,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par3'></td>
                             <td>
                                 <input type="number" name='score[]' id='3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -57,6 +70,8 @@
                             </td>
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par4'></td>
                             <td>
                                 <input type="number" name='score[]' id='4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -65,6 +80,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par5'></td>
                             <td>
                                 <input type="number" name='score[]' id='5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -73,6 +90,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par6'></td>
                             <td>
                                 <input type="number" name='score[]' id='6' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -81,6 +100,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par7'></td>
                             <td>
                                 <input type="number" name='score[]' id='7' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -89,6 +110,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par8'></td>
                             <td>
                                 <input type="number" name='score[]' id='8' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -97,6 +120,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par9'></td>
                             <td>
                                 <input type="number" name='score[]' id='9' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -105,6 +130,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par10'></td>
                             <td>
                                 <input type="number" name='score[]' id='10' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -113,6 +140,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par11'></td>
                             <td>
                                 <input type="number" name='score[]' id='11' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -121,6 +150,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par12'></td>
                             <td>
                                 <input type="number" name='score[]' id='12' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -129,6 +160,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par13'></td>
                             <td>
                                 <input type="number" name='score[]' id='13' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -137,6 +170,8 @@
                             </td>                             
                         </tr>                                                
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par14'></td>
                             <td>
                                 <input type="number" name='score[]' id='14' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -145,6 +180,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par15'></td>
                             <td>
                                 <input type="number" name='score[]' id='15' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -153,6 +190,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par16'></td>
                             <td>
                                 <input type="number" name='score[]' id='16' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -161,6 +200,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par17'></td>
                             <td>
                                 <input type="number" name='score[]' id='17' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -169,6 +210,8 @@
                             </td>                             
                         </tr>
                         <tr>
+                            <td><p>1</p></td>
+                            <td id='par18'></td>
                             <td>
                                 <input type="number" name='score[]' id='18' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
                             </td>
@@ -188,33 +231,61 @@
         <!-- JQUERY TO EXTRACT COURSE ID FROM URL BAR AND PUT IN HIDDEN FIELD -->
 
         <script>
+
+        function displayAll(data) {
+                var info = data;
+                var par = data[0].par;
+                var name = data[0].coursename;
+                
+                // Adding course name //
+                $('#courseName').append(name);
+
+                // JQuery for adding Par to each hole //
+                $('#par1').text(par[0]);
+                $('#par2').text(par[1]);
+                $('#par3').text(par[2]);
+                $('#par4').text(par[3]);
+                $('#par5').text(par[4]);
+                $('#par6').text(par[5]);
+                $('#par7').text(par[6]);
+                $('#par8').text(par[7]);
+                $('#par9').text(par[8]);
+                $('#par10').text(par[9]);
+                $('#par11').text(par[10]);
+                $('#par12').text(par[11]);
+                $('#par13').text(par[12]);
+                $('#par14').text(par[13]);
+                $('#par15').text(par[14]);
+                $('#par16').text(par[15]);                               
+                $('#par17').text(par[16]);
+                $('#par18').text(par[17]);
+        }
+
         function courseData() {
             var pathArray = window.location.pathname.split('/');
             var courseID = pathArray[1]; 
-            var customURL = "/" + courseID + ".json"            
+            var customURL = "/" + courseID + '.json'           
             // REGEX to extract the course ID
             $('#courseID').val(courseID);
 
             // 1. AJAX request to get course info, querying DB using courseID
+            
             $.ajax({
-                url: customURL,
-                data: courseID, 
-                datatype: 'json',
-                // success: function(data) {
-                // var courses = data;
-                // console.log('AJAX request here: ' + courses);
+                    url: customURL,
+                    type: 'GET',
+                    datatype: 'json',
+                    success: displayAll
             });
         };
-
-
-
-
 
         $(function() {
 
             courseData();
 
         });
+
+
+
 
         </script>
 
