working score submission

--- a/views/newScore.html
+++ b/views/newScore.html
@@ -236,6 +236,7 @@
                 var info = data;
                 var par = data[0].par;
                 var name = data[0].coursename;
+                console.log(typeof(par[4]));
                 
                 // Adding course name //
                 $('#courseName').append(name);
