--- a/views/profile.html
+++ b/views/profile.html
@@ -14,9 +14,56 @@
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
     <body>
-        <h1>Profile Page</h1>
 
-            <h3 id='hello'>Hello, </h3>
+            <nav class="navbar navbar-default">
+              <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                      <ul class="nav navbar-nav">
+                        <li id='hello'>Welcome, </li>
+                      </ul>
+                      <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Options<span class="caret"></span></a>
+                          <ul class="dropdown-menu">
+                            <li><a href="/mycourses">Submit A New Score</a></li>
+                            <li><a href="/scorecard">Create a New Scorecard Template</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/logout">Logout</a></li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </div><!-- /.navbar-collapse -->
+                  </div><!-- /.container-fluid -->
+            </nav>
+
+
+                <!-- Recent ScoresTable -->
+                <div class="panel panel-default">
+                    <div class="panel-heading">Your Most Recent Scores</div>
+                        <table class="table" >
+                            <thead>
+                                <tr>
+
+                                    <td>Course ID</td>
+
+                                </tr>
+                            </thead>
+                            <tbody id='scores-placeholder'></tbody>
+                        </table>
+                </div>
+
 
     </body>
 </html>
+
+
+    <!-- Recent Scores Template -->
+      <script type="text/template" id="scores-template">
+                <tr>
+
+                    <td> <%= _id %> </td>
+
+                </tr>
+      </script>
