updated models and submission to DB, profile page updates

--- a/views/login.html
+++ b/views/login.html
@@ -18,8 +18,8 @@
 
             <form method='POST' action='/login'>
    
-                <input placeholder="E-Mail Address" class="textbox-n" type="text" name='email'>
-                <input placeholder="Password" class="textbox-n" type="password" name='password'>
+                <input placeholder="E-Mail Address" class="textbox-n" type="text" name='email' required='true'>
+                <input placeholder="Password" class="textbox-n" type="password" name='password' required='true'>
 
                 <button class="btn btn-default">Login</button>
 
