--- a/views/profile.html
+++ b/views/profile.html
@@ -46,7 +46,10 @@
                             <thead>
                                 <tr>
 
-                                    <td>Course ID</td>
+                                    <td>Date</td>
+                                    <td>Course Name</td>
+                                    <td>Gross Score</td>
+                                    <td>Putts</td>
 
                                 </tr>
                             </thead>
@@ -63,7 +66,10 @@
       <script type="text/template" id="scores-template">
                 <tr>
 
-                    <td> <%= _id %> </td>
+                    <td> <%= date %> </td>
+                    <td> <%= courseName %> </td>
+                    <td> <%= score %> </td>  
+                    <td> <%= putts %> </td>  
 
                 </tr>
       </script>
