--- a/views/signup.html
+++ b/views/signup.html
@@ -18,10 +18,10 @@
 
             <form method='POST' action='/signup' id='new-user'>
 
-                <input placeholder="Firstname" class="textbox-n" type="text" name='firstname'>
-                <input placeholder="Surname" class="textbox-n" type="text" name='surname'>
-                <input placeholder="E-Mail Address" class="textbox-n" type="text" name='email'>
-                <input placeholder="Password" class="textbox-n" type="password" name='password'>
+                <input placeholder="Firstname" class="textbox-n" type="text" name='firstname' required='true'>
+                <input placeholder="Surname" class="textbox-n" type="text" name='surname' required='true'>
+                <input placeholder="E-Mail Address" class="textbox-n" type="text" name='email' required='true'>
+                <input placeholder="Password" class="textbox-n" type="password" name='password' required='true'>
             
                 <button class="btn btn-default form-control">Complete Sign Up</button>
 
