--- a/views/newCourseInfo.html
+++ b/views/newCourseInfo.html
@@ -18,7 +18,7 @@
         <h1>New Course Info Page</h1>
     
             <form method='POST' action='/scorecard' id='new-course'>
-                <input type="text" name='coursename' class="form-control" placeholder="Name of Golf Course" aria-describedby="sizing-addon2">
+                <input type="text" name='coursename' class="form-control" placeholder="Name of Golf Course" aria-describedby="sizing-addon2" required='true'>
                 <table>
                     <thead>
                         <tr>
@@ -28,7 +28,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
             <!-- CAN EVENTUALLY PUT IN YARDAGE INFO, STROKE INDEX?? -->
 <!--                             <td>     
@@ -37,87 +37,87 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='13' class="form-control" placeholder="13th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='13' class="form-control" placeholder="13th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='14' class="form-control" placeholder="14th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='14' class="form-control" placeholder="14th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='15' class="form-control" placeholder="15th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='15' class="form-control" placeholder="15th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='16' class="form-control" placeholder="16th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='16' class="form-control" placeholder="16th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='17' class="form-control" placeholder="17th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='17' class="form-control" placeholder="17th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <input type="number" name='par[]' id='18' class="form-control" placeholder="18th hole" aria-describedby="sizing-addon2" min='3' max='5'>
+                                <input type="number" name='par[]' id='18' class="form-control" placeholder="18th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
                             </td>
                         </tr>
                     </tbody>
