--- a/views/newScore.html
+++ b/views/newScore.html
@@ -19,14 +19,14 @@
         <h1>New Score Page</h1>
 
         <h3 id='courseName'>Course: </h3>
-        <h5 id='test'></h5>
     
             <form method='POST' action='/:course/newscore' id='new-score'>
    
-                <input placeholder="Date of Round" class="textbox-n" type="" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" name='date'>
+                <input placeholder="Date of Round" class="textbox-n" type="" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" name='date' required='true'>
 
-                <input type="hidden" id="courseID" name='coursename' value=''>
-                
+                <input type="hidden" id="courseID" name='courseID' value=''>
+                <input type="hidden" id="courseNameVal" name='courseName' value=''>       
+
                 <table>
                     <thead>
                         <tr>
@@ -42,10 +42,10 @@
                             <td>1</td>
                             <td id='par1'></td>
                             <td>
-                                <input type="number" name='score[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>
                             <td>Net Score Here: </td>                            
                         </tr>
@@ -53,170 +53,170 @@
                             <td><p>1</p></td>
                             <td id='par2'></td>
                             <td>
-                                <input type="number" name='score[]' id='2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par3'></td>
                             <td>
-                                <input type="number" name='score[]' id='3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par4'></td>
                             <td>
-                                <input type="number" name='score[]' id='4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par5'></td>
                             <td>
-                                <input type="number" name='score[]' id='5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par6'></td>
                             <td>
-                                <input type="number" name='score[]' id='6' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='6' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par7'></td>
                             <td>
-                                <input type="number" name='score[]' id='7' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='7' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par8'></td>
                             <td>
-                                <input type="number" name='score[]' id='8' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='8' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par9'></td>
                             <td>
-                                <input type="number" name='score[]' id='9' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='9' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par10'></td>
                             <td>
-                                <input type="number" name='score[]' id='10' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='10' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par11'></td>
                             <td>
-                                <input type="number" name='score[]' id='11' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='11' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par12'></td>
                             <td>
-                                <input type="number" name='score[]' id='12' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='12' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par13'></td>
                             <td>
-                                <input type="number" name='score[]' id='13' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='13' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>                                                
                         <tr>
                             <td><p>1</p></td>
                             <td id='par14'></td>
                             <td>
-                                <input type="number" name='score[]' id='14' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='14' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par15'></td>
                             <td>
-                                <input type="number" name='score[]' id='15' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='15' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par16'></td>
                             <td>
-                                <input type="number" name='score[]' id='16' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='16' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par17'></td>
                             <td>
-                                <input type="number" name='score[]' id='17' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='17' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                         <tr>
                             <td><p>1</p></td>
                             <td id='par18'></td>
                             <td>
-                                <input type="number" name='score[]' id='18' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10'>
+                                <input type="number" name='score[]' id='18' class="form-control" placeholder="" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
                             </td>
                             <td>
-                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10'>
+                                <input type="number" name='putts[]' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='0' max='10' required='true'>
                             </td>                             
                         </tr>
                     </tbody>
@@ -240,6 +240,7 @@
                 
                 // Adding course name //
                 $('#courseName').append(name);
+                $('#courseNameVal').val(name);
 
                 // JQuery for adding Par to each hole //
                 $('#par1').text(par[0]);
