working templating on MyCourses page

--- a/views/myCourses.html
+++ b/views/myCourses.html
@@ -27,8 +27,7 @@
 
                 <script type="text/template" id="courseList-template">
                       <li>
-                        <a href='/<%= _id %>/newscore' data-id='<%= _id %>'>Name of course here</a>
-                         
+                        <a href='/<%= _id %>/newscore' data-id='<%= _id %>'><%= coursename %></a>
                       </li>
                   </script>
 
