update to new scorecard submission page

--- a/views/signup.html
+++ b/views/signup.html
@@ -14,6 +14,8 @@
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
     <body>
+    <div class='container'>            
+
         <h1>New User Sign Up Page</h1>
 
             <form method='POST' action='/signup' id='new-user'>
@@ -27,5 +29,6 @@
 
             </form>
 
+    </div>
     </body>
 </html>
