--- a/views/fullScoresList.html
+++ b/views/fullScoresList.html
@@ -7,12 +7,82 @@
         <script src="/vendor/underscore/underscore-min.js"></script>
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
-        <script src="/static/javascript/newscore.js"></script>
+        <script src="/static/javascript/scorelist.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
     <body>
-        <h1>Full list of games</h1>
+    <div class='container'>
+
+
+          <!-- NAVBAR AT TOP OF PAGE -->
+
+          <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">i.Caddy</a>
+              </div>
+
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="/">My Profile</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Golfer Options<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/mycourses">Submit A New Score</a></li>
+                      <li><a href="/scorelist">View All Scores</a></li>
+                      <li><a href="/scorecard">Create a New Scorecard Template</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="/logout">Logout</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+          </nav>
+            
+
+                <!-- RECENT SCORES TABLE -->
+                <div class="panel panel-default">
+                    <div class="panel-heading">Record of Rounds Played:</div>
+                        <table class="table" >
+                            <thead>
+                                <tr>
+                                    <td>Date</td>
+                                    <td>Course</td>
+                                    <td>Gross Score</td>
+                                    <td>No. of Putts</td>
+                                    <td>Delete</td>
+                                </tr>
+                            </thead>
+                            <tbody id='scores-placeholder'></tbody>
+                        </table>
+                </div>
+    
+    </div>
     </body>
 </html>
+
+
+    <!-- Full Scores Template -->
+      <script type="text/template" id="scores-template">
+                <tr>
+
+                    <td> <%= date %> </td>
+                    <td> <a href="/<%= course_id %><%= courseName %>"><%= courseName %> </td>
+                    <td> <a href="/<%= _id %><%= courseName %>"><%= totalScore %> </td>
+                    <td> <%= totalPutts %> </td>
+                    <td> <div class="btn-group btn-group-xs close" role="group" aria-label="..." onclick='deleteScore(this)' data-id=<%= _id %> >X</div> </td>
+
+                </tr>
+      </script>
