--- a/views/login.html
+++ b/views/login.html
@@ -8,22 +8,32 @@
         <script src="/vendor/underscore/underscore-min.js"></script>
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
-        <script src="/static/javascript/newscore.js"></script>
+        <script src="/static/javascript/login.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
+        <link href="css/YTPlayer.css" media="all" rel="stylesheet" type="text/css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="inc/jquery.mb.YTPlayer.js"></script>
     </head>
     <body>
-        <h1>Login Page</h1>
+    <div class='container'> 
 
-            <form method='POST' action='/login'>
-   
-                <input placeholder="E-Mail Address" class="textbox-n" type="text" name='email' required='true'>
-                <input placeholder="Password" class="textbox-n" type="password" name='password' required='true'>
+        <div class='player' id="bgndVideo" data-property="{videoURL:'https://www.youtube.com/watch?v=kgeYE-ogpb0',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}">
 
-                <button class="btn btn-default">Login</button>
+            <div class='container'>
+                <div class='row'> 
+                    <div class='col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3'> 
+                        <form method='POST' action='/login'>
+                            <input placeholder="E-Mail Address" class="form-control" type="text" name='email' required='true'>
+                            <input placeholder="Password" class="form-control" type="password" name='password' required='true'>
+                            <button class="btn btn-default">Login</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
-            </form>
+        </div>
 
+    </div>
     </body>
 </html>
