--- a/views/newCourseInfo.html
+++ b/views/newCourseInfo.html
@@ -15,113 +15,152 @@
     </head>
     <body>
     <div class='container'>
-        <h1>New Course Info Page</h1>
+
+          <!-- NAVBAR AT TOP OF PAGE -->
+
+          <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">i.Caddy</a>
+              </div>
+
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="/">My Profile</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Golfer Options<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/mycourses">Submit A New Score</a></li>
+                      <li><a href="/scorelist">View All Scores</a></li>
+                      <li><a href="/scorecard">Create a New Scorecard Template</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="/logout">Logout</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+          </nav>
     
             <form method='POST' action='/scorecard' id='new-course'>
-                <input type="text" name='coursename' class="form-control" placeholder="Name of Golf Course" aria-describedby="sizing-addon2" required='true'>
-                <table>
-                    <thead>
-                        <tr>
-                            <td>Par for the Course</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-            <!-- CAN EVENTUALLY PUT IN YARDAGE INFO, STROKE INDEX?? -->
-<!--                             <td>     
-                                <input type="number" name='par[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='3' max='5'>
-                            </td> -->
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='13' class="form-control" placeholder="13th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='14' class="form-control" placeholder="14th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='15' class="form-control" placeholder="15th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='16' class="form-control" placeholder="16th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='17' class="form-control" placeholder="17th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="number" name='par[]' id='18' class="form-control" placeholder="18th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+
+            <div class="input-group input-group">
+                <span class="input-group-addon" id="sizing-addon1">Name of Course:</span>
+                <input type="text" name='coursename' class="form-control" placeholder="Submit the Name of Golf Course Here" aria-describedby="sizing-addon2" required='true'>
+            </div><br>
+                <table class='table'>
+
+                        <div class='row'>
+
+                                <div class='col-xs-6 col-sm-3 col-md-3'>
+
+                                        <!-- Par for Holes 1 - 9 -->
+
+                                        <input type="number" name='par[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                </div>
+
+                                <div class='col-xs-6 col-sm-3 col-md-3'>
+
+                                        <!-- Yardage for Holes 1 - 9 -->
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                </div>
+
+
+                                <div class='col-xs-6 col-sm-3 col-md-3'>
+
+                                        <!-- Par for Holes 1 - 9 -->
+
+                                        <input type="number" name='par[]' id='10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='13' class="form-control" placeholder="13th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='14' class="form-control" placeholder="14th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='15' class="form-control" placeholder="15th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='16' class="form-control" placeholder="16th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='17' class="form-control" placeholder="17th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                        <input type="number" name='par[]' id='18' class="form-control" placeholder="18th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+
+                                </div>
+
+                                <div class='col-xs-6 col-sm-3 col-md-3'>
+
+                                        <!-- Yardage for Holes 10 - 18 -->
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+
+                                </div>
+
+                        </div>
+
+                </table><br>
                 <button class="btn btn-default">Submit Scorecard Template</button>
             </form>
 
